// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image> renders when {image} 1`] = `
<div
  className="undefined"
  style={
    Object {
      "backgroundImage": "url(image.png)",
    }
  }
/>
`;

exports[`<Image> when {icon} 1`] = `
<div
  className="undefined"
  style={
    Object {
      "backgroundImage": "url(image.png)",
    }
  }
/>
`;

exports[`<Image> when {inherit} 1`] = `
<div
  className="undefined styles"
  style={
    Object {
      "backgroundImage": "url(image.png)",
    }
  }
/>
`;
